Fixing font face on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -23,7 +23,7 @@ main {
     width: 100vw;
     height: 100vh;
     overflow-x: auto;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 #top-section {
